Subscription Display Changes
Inbound and Outbound requests now say Pending. While creating a
subscription, labels now display “My Role” and “Subscriber Role”
instead of “My_Role” and “Your_Role”.

Prototypes also only add a channel, a subscription request, and event
if there is data in the text fields. Blank forms will not be added to
the prototype.

--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -39,9 +39,9 @@
         <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="ex: school_picos" />
         <label for="Subscription_type">Channel Type:</label>
         <input type="text" name="Subscription_type" id="Subscription_type" value="" placeholder="Type" />
-        <label for="Subscription_my_role">My_role:</label>
+        <label for="Subscription_my_role">My Role:</label>
         <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="ex: Teacher" />
-        <label for="Subscription_your_role">Your_role:</label>
+        <label for="Subscription_your_role">Subscriber Role:</label>
         <input type="text" name="Subscription_your_role" id="Subscription_your_role" value="" placeholder="ex: Student" />
         <label for="Subscription_target">Target:</label>
         <input type="text" name="Subscription_target" id="Subscription_target" value="" placeholder="Target Pico ECI (ex: 01234567-89AB-CDEF-0123-456789ABCDEF)" />
