--- a/appPages/oAuth-client-registration.html
+++ b/appPages/oAuth-client-registration.html
@@ -44,7 +44,7 @@
               <label for="client_info_page_url">info page url:</label>
       <input type="text" name="client_info_page_url" id="client_info_page_url" value="" placeholder="http://www.example.com/info" />
               <label for="client_bootstrapRids">bootstrap Rids:</label>
-      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="ex: b507199x5.prod, b507199x1.prod" />
+      <input type="text" name="client_bootstrapRids" id="client_bootstrapRids" value="" placeholder="ex: v1_wrangler.prod, b507199x1.prod" />
 		</div>
 	      </form>
 	      <div>
