Changed values for placeholders
Especially for subscriptions

--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -34,11 +34,11 @@
      <form id="form-subscribe">
        <div data-role="fieldcontain">
         <label for="Subscription_name">Name:</label>
-        <input type="text" name="Subscription_name" id="Subscription_name" value="" placeholder="Name" />
+        <input type="text" name="Subscription_name" id="Subscription_name" value="" placeholder="The Name for the Channel" />
         <label for="Subscription_name_space">Name Space:</label>
         <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="ex: school_picos" />
         <label for="Subscription_type">Channel Type:</label>
-        <input type="text" name="Subscription_type" id="Subscription_type" value="" placeholder="Type" />
+        <input type="text" name="Subscription_type" id="Subscription_type" value="" placeholder="default" />
         <label for="Subscription_my_role">My Role:</label>
         <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="ex: Teacher" />
         <label for="Subscription_your_role">Subscriber Role:</label>
@@ -46,7 +46,7 @@
         <label for="Subscription_target">Target:</label>
         <input type="text" name="Subscription_target" id="Subscription_target" value="" placeholder="Target Pico ECI (ex: 01234567-89AB-CDEF-0123-456789ABCDEF)" />
         <label for="Subscription_attrs">Attrs:</label>
-        <input type="text" name="Subscription_attrs" id="Subscription_attrs" value="" placeholder="" />
+        <input type="text" name="Subscription_attrs" id="Subscription_attrs" value="" placeholder="ex: {'duration': 3600, ...}" />
       </div>
     </form>
     <div>
