--- a/appPages/Scheduled.html
+++ b/appPages/Scheduled.html
@@ -64,7 +64,7 @@
 	      		<input type="text" name="recurrment" id="recurrment" value="" placeholder="CRONTAB Format" />
 
 	          <label for="event_attributes">Event Attributes:</label>
-	      		<input type="text" name="event_attributes" id="event_attributes" value="" placeholder="{'wrangler': rocks, ...}" />
+	      		<input type="text" name="event_attributes" id="event_attributes" value="" placeholder="ex: {'wrangler': rocks, ...}" />
 					</div>
 	      </form>
 	      <div>
