enabling "Add Prototypes"

--- a/appPages/subscription.html
+++ b/appPages/subscription.html
@@ -38,7 +38,7 @@
         <label for="Subscription_name_space">Name Space:</label>
         <input type="text" name="Subscription_name_space" id="Subscription_name_space" value="" placeholder="ex: school_picos" />
         <label for="Subscription_type">Channel Type:</label>
-        <input type="text" name="Subscription_type" id="Subscription_type" value="" placeholder="default" />
+        <input type="text" name="Subscription_type" id="Subscription_type" value="Subscription" placeholder="default" />
         <label for="Subscription_my_role">My Role:</label>
         <input type="text" name="Subscription_my_role" id="Subscription_my_role" value="" placeholder="ex: Teacher" />
         <label for="Subscription_your_role">Subscriber Role:</label>
