--- a/appPages/prototype-management.html
+++ b/appPages/prototype-management.html
@@ -140,7 +140,7 @@
       <form id="form-update-prototype-meta">
         <div data-role="fieldcontain">
           <label for="prototype_name">Name:</label>
-          <input type="text" name="prototype_name" id="u_prototype_name" class="proto-field" value="" placeholder="Name" />
+          <input type="text" name="prototype_name" id="u_prototype_name" class="proto-field" value="" placeholder="Name" readonly="readonly"/>
           <label for="prototype_description">Description:</label>
           <input type="text" name="prototype_description" id="u_prototype_description" class="proto-field" value="" placeholder="Description" />
           <label for="prototype_rids">RIDs:</label>
