Sorting Registered Rulesets
Sort by name, rid, and cache time

--- a/appPages/prototype-management.html
+++ b/appPages/prototype-management.html
@@ -75,7 +75,7 @@
           <input type="text" name="prototype_sub_namespace" id="a_prototype_sub_namespace0" class="proto-field" value="" placeholder="ex: school_picos" />
           <label for="prototype_sub_type">Channel Type:</label>
           <input type="text" name="prototype_sub_type" id="a_prototype_sub_type0" class="proto-field" value="" placeholder="Type" />
-          <label for="prototype_sub_myRole">My Role:</label>
+          <label for="prototype_sub_myRole">Child Role:</label>
           <input type="text" name="prototype_sub_myRole" id="a_prototype_sub_myRole0" class="proto-field" value="" placeholder="ex: Teacher" />
           <label for="prototype_sub_subRole">Subscriber Role:</label>
           <input type="text" name="prototype_sub_subRole" id="a_prototype_sub_subRole0" class="proto-field" value="" placeholder="ex: Student" />
