--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -45,6 +45,17 @@
             </li>  
           </ul><!-- /listview -->
 
+          <div data-role="tabs" id="tabs">
+            <div data-role="navbar">
+              <ul>
+                <li><a id="listing-rulesets-sortby" style="background-color:black;color:white;pointer-events:none" data-ajax="false">Sort by:</a></li>
+                <li><a id="listing-rulesets-sortby-name" class="ui-btn-active" data-ajax="false" selected>Name</a></li>
+                <li><a id="listing-rulesets-sortby-rid" data-ajax="false">RID</a></li>
+                <li><a id="listing-rulesets-sortby-cache" data-ajax="false">Last Cached</a></li>
+              </ul>
+            </div>
+          </div>
+
           <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="manage-list">
      	  </div>
 
