--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -49,8 +49,8 @@
             <div data-role="navbar">
               <ul>
                 <li><a id="listing-rulesets-sortby" style="background-color:black;color:white;pointer-events:none" data-ajax="false">Sort by:</a></li>
-                <li><a id="listing-rulesets-sortby-name" class="ui-btn-active" data-ajax="false" selected>Name</a></li>
-                <li><a id="listing-rulesets-sortby-rid" data-ajax="false">RID</a></li>
+                <li><a id="listing-rulesets-sortby-name"  data-ajax="false" selected>Name</a></li>
+                <li><a id="listing-rulesets-sortby-rid" class="ui-btn-active" data-ajax="false">RID</a></li>
                 <li><a id="listing-rulesets-sortby-cache" data-ajax="false">Last Cached</a></li>
               </ul>
             </div>
